--- a/weatherlyn/pubspec.yaml
+++ b/weatherlyn/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   fl_chart: ^0.12.0
   font_awesome_flutter: ^8.10.0
+  page_transition: ^1.1.7+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
